# browser

./: Makefile  README.md  awb  meson.build
src/: main.cpp
src/engine/: data.hpp  orca.cpp  orca.hpp
src/gui/: urlbar.cpp  urlbar.hpp
src/http/: http.cpp  http.hpp  https.cpp  https.hpp
src/layout/: engine.hpp
src/parsing/: dom.cpp  dom.hpp  parser.cpp  parser.hpp
src/render/: renderer.cpp  renderer.hpp
src/telescope/: tel-parser.cpp  tel-parser.hpp  tel-renderer.cpp  tel-renderer.hpp  telescope.cpp  telescope.hpp
src/utils/: log.cpp  log.hpp
test/: index.html
